[tool.poetry]
name = "ipttrace"
version = "0.2.5"
description = "A CLI Helps You Trace Iptables Rules at Ease"
authors = ["sieginglion <sieginglion@gmail.com>"]
repository = "https://github.com/sieginglion/ipttrace"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.3"
dataclasses = { version = "^0.8", python = "<3.7" }
rich = "^12.6.0"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
ipython = "^7.16.3"
isort = "^5.10.1"
types-dataclasses = "^0.6.6"

[tool.poetry.scripts]
ipttrace = "ipttrace.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
